--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -18,22 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="スマホ 婆スターズ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqg-DQ-4Zs">
-                                <rect key="frame" x="0.0" y="53.5" width="375" height="66.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
-                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="shadowOffset" width="1" height="1"/>
-                            </label>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="daF-KZ-hay" userLabel="Margin01">
-                                <rect key="frame" x="37.5" y="20" width="300" height="33.5"/>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
-                                </accessibility>
-                            </imageView>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KeU-p4-c4e" userLabel="Margin02">
-                                <rect key="frame" x="37.5" y="120" width="300" height="33.5"/>
+                                <rect key="frame" x="37" y="120" width="300" height="33.5"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" button="YES" image="YES"/>
                                 </accessibility>
@@ -45,7 +31,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68K-Mn-bfK">
-                                <rect key="frame" x="224.5" y="534" width="75.5" height="66.5"/>
+                                <rect key="frame" x="224" y="534" width="75.5" height="66.5"/>
                                 <state key="normal" title="進む"/>
                                 <connections>
                                     <action selector="nextView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7iI-GK-aS3"/>
@@ -66,7 +52,7 @@
                                 </connections>
                             </button>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1BP-hK-6xb" userLabel="Margin03">
-                                <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
+                                <rect key="frame" x="0.0" y="600" width="375" height="66.5"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" button="YES" image="YES"/>
                                 </accessibility>
@@ -83,8 +69,17 @@
                                     <accessibilityTraits key="traits" button="YES" image="YES"/>
                                 </accessibility>
                             </imageView>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="daF-KZ-hay" userLabel="Margin01">
+                                <rect key="frame" x="37" y="20" width="300" height="33.5"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
+                                </accessibility>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DZg-UB-G8W">
+                                <rect key="frame" x="0.0" y="53" width="375" height="66.5"/>
+                            </imageView>
                             <imageView tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nu9-aQ-SNm">
-                                <rect key="frame" x="75" y="153" width="225" height="200.5"/>
+                                <rect key="frame" x="75" y="153.5" width="225" height="200.5"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" button="YES" image="YES"/>
                                 </accessibility>
@@ -95,7 +90,6 @@
                             <constraint firstItem="daF-KZ-hay" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.05" id="0vw-p8-txY"/>
                             <constraint firstItem="eeh-Fp-z1h" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="2Vn-tf-15A"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="top" secondItem="8KA-qA-eut" secondAttribute="bottom" id="2vR-g0-wjO"/>
-                            <constraint firstItem="KeU-p4-c4e" firstAttribute="top" secondItem="wqg-DQ-4Zs" secondAttribute="bottom" id="3l8-4B-V4d"/>
                             <constraint firstItem="Nu9-aQ-SNm" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.6" id="5oY-ng-b2F"/>
                             <constraint firstAttribute="trailing" secondItem="eeh-Fp-z1h" secondAttribute="trailing" id="7rJ-Od-m3Z"/>
                             <constraint firstItem="eeh-Fp-z1h" firstAttribute="leading" secondItem="68K-Mn-bfK" secondAttribute="trailing" id="8E3-cY-F9m"/>
@@ -106,41 +100,43 @@
                             <constraint firstItem="PYw-uf-7HW" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="ILt-0r-4Lo"/>
                             <constraint firstItem="eeh-Fp-z1h" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="IXc-dz-cS0"/>
                             <constraint firstItem="KeU-p4-c4e" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jq2-HF-VEy"/>
+                            <constraint firstItem="DZg-UB-G8W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kny-15-ETj"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="LJA-bn-JLq"/>
                             <constraint firstItem="trX-x7-DeZ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="MTE-aR-Dmo"/>
                             <constraint firstItem="trX-x7-DeZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NV3-9T-4nQ"/>
                             <constraint firstItem="tmZ-fG-YGy" firstAttribute="leading" secondItem="trX-x7-DeZ" secondAttribute="trailing" id="NwP-1M-QQu"/>
                             <constraint firstItem="PYw-uf-7HW" firstAttribute="top" secondItem="Nu9-aQ-SNm" secondAttribute="bottom" id="Ojx-XW-BhG"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="top" secondItem="trX-x7-DeZ" secondAttribute="bottom" id="ROB-nZ-YWd"/>
-                            <constraint firstItem="wqg-DQ-4Zs" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="Rdm-ED-mDq"/>
                             <constraint firstItem="8KA-qA-eut" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="Sfq-Ne-Sqg"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1BP-hK-6xb" secondAttribute="bottom" id="Shl-Rk-lgG"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="UFI-bw-psq"/>
-                            <constraint firstItem="wqg-DQ-4Zs" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Wkx-AM-QZ5"/>
                             <constraint firstItem="daF-KZ-hay" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="WqO-gg-N9Z"/>
                             <constraint firstItem="daF-KZ-hay" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wzd-gz-D3z"/>
                             <constraint firstItem="68K-Mn-bfK" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="Ytz-yQ-M79"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="top" secondItem="trX-x7-DeZ" secondAttribute="bottom" id="aKL-dV-9Tv"/>
+                            <constraint firstItem="DZg-UB-G8W" firstAttribute="top" secondItem="daF-KZ-hay" secondAttribute="bottom" id="aN4-GB-f7a"/>
                             <constraint firstItem="tmZ-fG-YGy" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="bg1-gB-5fI"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="top" secondItem="68K-Mn-bfK" secondAttribute="bottom" id="c7Z-I4-Hwh"/>
                             <constraint firstItem="8KA-qA-eut" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dCB-Yc-jJs"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="top" secondItem="eeh-Fp-z1h" secondAttribute="bottom" id="dG3-Fk-dCl"/>
                             <constraint firstItem="8KA-qA-eut" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="dRa-Xp-9vM"/>
+                            <constraint firstItem="DZg-UB-G8W" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="dz0-JX-gpn"/>
                             <constraint firstItem="KeU-p4-c4e" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="h33-4B-UVX"/>
+                            <constraint firstItem="KeU-p4-c4e" firstAttribute="top" secondItem="DZg-UB-G8W" secondAttribute="bottom" id="jif-Nc-Uro"/>
                             <constraint firstItem="Nu9-aQ-SNm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="keS-G4-igP"/>
                             <constraint firstItem="trX-x7-DeZ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="liu-UE-LxT"/>
+                            <constraint firstItem="DZg-UB-G8W" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="n1P-SL-zmf"/>
                             <constraint firstItem="Nu9-aQ-SNm" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="psI-V7-ocN"/>
                             <constraint firstItem="PYw-uf-7HW" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="qHe-W0-pFf"/>
                             <constraint firstItem="1BP-hK-6xb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sch-2u-pxu"/>
                             <constraint firstItem="PYw-uf-7HW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tC4-bm-21u"/>
                             <constraint firstItem="Nu9-aQ-SNm" firstAttribute="top" secondItem="KeU-p4-c4e" secondAttribute="bottom" id="uC1-E7-7ep"/>
                             <constraint firstItem="68K-Mn-bfK" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="v1T-BL-43N"/>
-                            <constraint firstItem="wqg-DQ-4Zs" firstAttribute="top" secondItem="daF-KZ-hay" secondAttribute="bottom" id="xNi-QB-8ud"/>
-                            <constraint firstItem="wqg-DQ-4Zs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="y8h-zb-DrP"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="appTitle" destination="DZg-UB-G8W" id="Dc0-vW-ycs"/>
                         <outlet property="backButton" destination="tmZ-fG-YGy" id="PJV-yZ-rSm"/>
                         <outlet property="mainImage" destination="Nu9-aQ-SNm" id="Khw-hI-hPU"/>
                         <outlet property="mainTitle" destination="PYw-uf-7HW" id="fjJ-s9-zMe"/>
